# do-rag

./: .env.example  .gitignore  Modelfile  README.md  admin_server.py  chat_client.py  check_index.py  config.example.py  config.py  debug_dirty.py  debug_large_file.py  debug_optimization.py  debug_pdf.py  debug_specific_pdf.py  force_index_file.py  index_docs.py  indexer.py  indexing_state.json  inspect_qdrant_file.py  llm_backend.py  logging_config.py  main.py  pyproject.toml  reproduce_issue.py  run.sh  run_chat.sh  run_indexer.py  run_mcp_server.sh  run_ollama.sh  run_qdrant.sh  run_tts.sh  run_webui.sh  search_docs.py  server.py  settings.py  setup_model.sh  start_ollama.sh  stop.sh  test_docling.py  test_pypdf.py  (+4 more)
.specstory/history/: 2026-03-06_23-32Z-project-structural-and-conceptual-analysis.md  2026-03-06_23-33Z-do-rag-project-structure-exploration.md
chroma_db/: chroma.sqlite3
doc/: document-rag-system-spec.md  document-rag-system-spec.md:Zone.Identifier
open_webui/: local-file-expert.json  tool-server-do-rag.json
scripts/: import_model.sh  setup_env.sh
templates/: base.html  config.html  index.html  logs.html
windows/: bridge.py  scanner.py
