[project]
name = "do-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.12.0",
    "tqdm>=4.67.2",
    "uvicorn>=0.40.0",
]
